// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlexRow FlexRow component should render 1`] = `
<DocumentFragment>
  <div
    class="artifak__sc-6om8fa-0 fHIMYT"
  >
    Flex Row
  </div>
</DocumentFragment>
`;

exports[`FlexRow FlexRow component should render row-reverse 1`] = `
<DocumentFragment>
  <div
    class="artifak__sc-6om8fa-0 efQbZu"
  >
    Flex Row Reverse
  </div>
</DocumentFragment>
`;
